# TicTimac

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.hpp  Menu.cpp  Player.cpp  Player.hpp  ai.cpp  ai.hpp  verification.cpp  verification.hpp
